# toys

./: .doxygen  CMakeLists.txt  README.md
colouring/: CMakeLists.txt  LICENSE  README.md
colouring/CMakeModules/: FindCheck.cmake  FindSDL2.cmake
colouring/include/: colouring.h  config.h.in  world.h
colouring/src/: colouring.c  image.c  main.c  stack.c  utils.c  world.c
colouring/tests/: stack.c
cubes/: CMakeLists.txt  LICENSE  README.md
cubes/include/: Application.h  resources.h
cubes/include/gl/: Buffer.h  Shader.h  Vertex.h  common.h
cubes/shaders/: fragment.glsl  vertex.glsl
cubes/src/: Application.cxx  main.cxx
cubes/src/gl/: Shader.cxx  Vertex.cxx  common.cxx
custom-linking/: CMakeLists.txt  linker.script
custom-linking/include/: config.h.in  module.h
custom-linking/src/: main.cxx  module1.cxx  module2.cxx  module3.cxx
include/: config.h.in  image.h  resources.h  stack.h  utils.h
single/: shared_task.py
src/: colouring.c  image.c  main.c  stack.c  utils.c  world.c
template/: .doxygen  README.md
template-c-cmake/: CMakeLists.txt  LICENSE  README.md
template-c-cmake/include/: config.h.in
template-c-cmake/src/: example.c
template-c-cmake/tests/: main.c
template-python/: .gitignore  .pylintrc  .travis.yml  LICENSE  README.md  example.py  requirements-dev.txt  requirements.txt  setup.py  tox.ini
template-python/docs/: conf.py  hello.rst  index.rst
template-python/example/: __init__.py  hello.py  run.py
template-python/tests/: test_hello.py
template-sdl-c++/: CMakeLists.txt  LICENSE  README.md
template-sdl-c++/include/: Application.h
template-sdl-c++/src/: Application.cxx  main.cxx
template/include/: example.h
template/src/: main.c
template/tests/: example.c
tests/: main.c  world.c
